--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Django-app workflow
 on: [push]
 
 jobs:
-  tests:
+  flake_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -11,7 +11,7 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
 
     - name: Install dependencies
       run: | 
@@ -21,13 +21,31 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
         pip install -r requirements.txt 
-
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
-        python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
+        python -m flake8 
+        # перейти в папку, содержащую manage.py - <корневая_папка>/<папка_проекта>/manage.py
         cd infra_project/
-        # запустить написанные разработчиком тесты
+                # запустить написанные разработчиком тесты
         python manage.py test
+  
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: flake_tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 # Проверяет доступность репозитория DockerHub для workflow
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 # Вызывает сборщик контейнеров docker
+      - name: Login to Docker 
+        uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest
