--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Django-app workflow
 on: [push]
 
 jobs:
-  flake_tests:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,7 +33,7 @@ jobs:
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: flake_tests
+    needs: tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 # Проверяет доступность репозитория DockerHub для workflow
