--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
         with:
-          username: yanak38
+          username: YANAK38
           password: yana132456
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
