--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v1 # Запуск скрипта авторизации на DockerHub
         with:
-          username: YANAK38
-          password: yana132456
+          username: ${{ secrets.YANAK38 }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
         with:
           push: true
-          tags: yanak38/infra_actions:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/infra_actions:latest
